# e3-diffusion-propagator

./: .gitignore  README.md  pyproject.toml
configs/: argon.yaml  argon_colab.yaml
notebooks/: colab_workflow.ipynb
scripts/: _bootstrap.py  evaluate.py  rollout.py  sample.py  setup_mac.sh  train.py
src/diffusion_models/: __init__.py  utils.py
src/diffusion_models/data/: __init__.py  argon_dataset.py
src/diffusion_models/models/: __init__.py  diffusion.py  egnn.py
src/diffusion_models/training/: trainer.py
