[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-models"
version = "0.1.0"
description = "E(3)-equivariant diffusion propagator for molecular dynamics trajectories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.3",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "MDAnalysis>=2.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
